# cubicle_detect

./: .gitignore  .gitmodules  LICENSE  README.md  size input output
darknet/: .gitignore
darknet/scripts/: check_cuda.cu  cuda_script
darknet/src/: data.c  detector.c  image.c  image.h  image_opencv.cpp  list.h
darknet/src_bak/: blas.h  image.c
darknet_ros/: .gitignore  CMakeLists.txt  MOT17-05-DPM.txt  detection_plugin.xml  package.xml
darknet_ros/config/: cv.yaml  demo.rviz  demo1.rviz  params.yml  ros.yaml  yolo-obj.cfg  yolov3-spp.yaml  yolov3_bdd.yaml  yolov3_kitti.yaml  yolov3_mot.yaml  yolov3_tiny.yaml  zed.yaml
darknet_ros/doc/: CMakeLists.txt  Doxyfile.in  conf.py
darknet_ros/doc/source/: Doxyfile  conf.py  index.rst
darknet_ros/evaluation_new/: f031.txt  f049.txt  f052.txt  f086.txt
darknet_ros/include/darknet_ros/: Blob.h  DepthObjectDetector.h  Hungarian.h  Obstacles.h  YoloObjectDetector.hpp  functions.h  libsgm_config.h  segengine.h  stdafx.h  stereo_matching.h  structures.h  tsdeque.h  utilsSeg.h
darknet_ros/include/sgm/: configuration.h  cost_aggregation.h  disparity_method.h  util.h
darknet_ros/include/utils/: data.h  hog.h  timing.h
darknet_ros/launch/: bus.launch  bus_core.launch  bus_nodelet.launch  bus_tiny.launch  darknet_ros.launch  darknet_ros_gdb.launch  debug_bus.launch  demo.launch  demo_av1.launch  demo_av1_local.launch  demo_av1_mapping.launch  demo_av1_relocalizer.launch  demo_simple.launch  kitti.launch  loc.launch  long.launch  long_reverse.launch  wide.launch  yolo_v3.launch  yolo_v3_bdd.launch  zed.launch  zed_demo.launch
darknet_ros/results/: read.md
darknet_ros/results/test_cubic_21500/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt  0021.txt  0022.txt  0023.txt  0024.txt  0025.txt  0026.txt  0027.txt  0028.txt
darknet_ros/results/test_cubic_22100/: 0000.txt  0001.txt  0003.txt  0004.txt  0005.txt  0006.txt  0008.txt  0010.txt  0012.txt  0014.txt  0017.txt  0018.txt  0019.txt  0020.txt  0022.txt  0023.txt  0024.txt  0026.txt  0027.txt
darknet_ros/results/test_set/: 0000.txt  0002.txt  0007.txt  0009.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0021.txt  0023.txt  0024.txt  0025.txt  0028.txt
darknet_ros/results/training_cubic_21500/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt
darknet_ros/results/training_cubic_22100/: 0001.txt  0003.txt  0005.txt  0008.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0019.txt  0020.txt
darknet_ros/results/training_linear/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0010.txt  0011.txt  0014.txt  0015.txt  0016.txt  0018.txt  0019.txt  0020.txt
darknet_ros/results/training_onlyFea_22100/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt
darknet_ros/results/training_onlyL0c_21500/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt
darknet_ros/results/training_onlyLoc_22100/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt
darknet_ros/results/training_onlyfea_21500/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt
darknet_ros/results/training_set/: 0000.txt  0001.txt  0004.txt  0009.txt  0010.txt  0015.txt  0017.txt  0018.txt  0019.txt  0020.txt
darknet_ros/sgm/: CMakeLists.txt  README.md  cost_aggregation.h  disparity_method.cu  disparity_method.h  util.h
darknet_ros/src/: Blob.cpp  Blob.cu  DepthObjectDetector.cpp  Hungarian.cpp  Obstacles.cpp  YoloObjectDetector.cpp  YoloObjectDetector.cu  data.cpp  functions.cpp  hog.cpp  object_detector_nodelet.cpp  pointcloud.cpp  pointcloud.h  segengine.cpp  stdafx.cpp  stereo_matching.cpp  structures.cpp  track.hpp  track_kalman.hpp  utilsSeg.cpp  yolo_object_detector_node.cpp
darknet_ros/src/sgm/: costs.cu  debug.cu  disparity_method.cu  hamming_cost.cu  median_filter.cu
darknet_ros/yolo_network_config/cfg/: yolo-obj.cfg  yolo_bdd_c1.cfg  yolo_kitti.cfg  yolo_mot.cfg  yolov3-spp.cfg  yolov3.cfg  yolov3_kitti.cfg  yolov3_mot.cfg
darknet_ros/yolo_network_config/weights/: how_to_download_weights.txt
libSGM/: .gitignore  CMakeLists.txt
libSGM/include/: libsgm_config.h
libSGM/src/: CMakeLists.txt
