<?xml version="1.0"?>
<package format="2">
  <name>cubicle_detect</name>
  <version>1.1.3</version>
  <description>Darknet is an open source neural network framework that runs on CPU and GPU. You only look once (YOLO) is a state-of-the-art, real-time object detection system.</description>
  <maintainer email="hzhang032@e.ntu.edu.sg">Zhang Handuo</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/zhanghanduo/cubicle_detect</url>
  <author email="hzhang032@e.ntu.edu.sg">Zhang Handuo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>actionlib</depend>

  <!-- Test dependencies -->
  <test_depend>rostest</test_depend>
</package>
